exports[`dynamic snapshot /user/bob 1`] = `
<div>
  Hello 
  bob
</div>
`;

exports[`dynamic snapshot /userbob 1`] = `
<div>
  Oops
</div>
`;

exports[`snapshot /baz routing 1`] = `
<div
  className="baz">
  baz
</div>
`;

exports[`snapshot /foo routing 1`] = `
<div
  className="foo">
  foo
</div>
`;

exports[`snapshot default routing 1`] = `
<div
  className="default">
  default
</div>
`;

exports[`snapshot memory routing 1`] = `
<div>
  <div
    className="baz">
    baz
  </div>
  <div
    className="foo">
    foo
  </div>
</div>
`;
